# data_loader

./: config.yaml  document_processor.py  document_source.py  factory.py  hash.py  hashes.db  loader_flow.py  main.py  metadata_manager.py  pyproject.toml  registry.py  vector_db.py
chroma_db/: chroma.sqlite3
data_loaders/: folder_source.py
document_processors/: docling_processor.py
metadata/: sqlite_store.py
vectordbs/: chroma_db.py
